--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,26 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camp Grounds</title>
-</head>
-
-<body>
+<% layout('layouts/boilerplate') %>
     <h1>All Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
     </div>
-    <ul>
-        <% for(let campground of campgrounds) {%>
-            <li>
-                <a href="/campgrounds/<%= campground._id %>"><%= campground.title %>
-                </a>
-            </li>
-            <%}%>
-    </ul>
-
-</body>
-
-</html>
+    <% for(let campground of campgrounds) {%>
+        <div class="card" md-3>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" alt="Image Is Loading..." src="<%= campground.image %>">
+                </div>
+                <div class="col-mg-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= campground.location %>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">View <%= campground.title %></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <%}%>
