--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,7 +13,7 @@
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
         <main class="container mt-5">
-            <%//= success %>
+            <%- include('../partials/flash') %>
             <%- body %>
         </main>
         <%- include('../partials/footer') %>
@@ -28,7 +28,7 @@
                 integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
                 crossorigin="anonymous"></script>
 
-            <script src="/validateForms.js"></script>
+            <script src="/javascripts/validateForms.js"></script>
 </body>
 
 </html>
