--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -16,16 +16,21 @@
                     <li class="list-group-item text-muted">
                         <%= campground.location %>
                     </li>
+                    <li class="list-group-item">Submitted By
+                        <%= campground.author.username %>
+                    </li>
                     <li class="list-group-item">
                         <%= campground.price %>/night
                     </li>
                 </ul>
+                <% if(currentUser && campground.author.equals(currentUser)) { %>
                 <div class="card-body">
                     <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                     <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
                         <button class="btn btn-danger">Delete</button>
                     </form>
                 </div>
+                <% } %>
                 <div class="card-footer text-muted">
                     2 days ago
                 </div>
