--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,7 @@
         <div class="card" md-3>
             <div class="row">
                 <div class="col-md-4">
-                    <img class="img-fluid" alt="Image Is Loading..." src="<%= campground.image %>">
+                    <img class="img-fluid" alt="Image Is Loading..." src="<%= campground.images[0].url %>">
                 </div>
                 <div class="col-mg-8">
                     <div class="card-body">
