--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -50,6 +50,24 @@
                         Looks good!
                     </div>
                 </div>
+                <div class="mb-3">
+                    <div class="form-file custom-file">
+                        <input type="file" class="form-file-input" id="image" name="image" multiple>
+                        <label class="form-file-label" for="image">
+                            <span class="form-file-text custom-file-label">Add more image(s)...</span>
+                            <span class="form-file-button">Browse</span>
+                        </label>
+                    </div>
+                </div>
+                <div class="mb-3">
+                    <% campground.images.forEach(function(img,i) { %>
+                    <img src="<%= img.thumbnail %>" class="img-thumbnail" alt="">
+                    <div class="form-check-inline">
+                        <input type="checkbox" id="image-<%= i %>" name="deleteImages[]" value="<%= img.filename %>">
+                    </div>
+                    <label for="image-<%= i %>">Delete?</label>
+                    <% }) %>
+                </div>
                 <div class=" mb-3">
                     <button class="btn btn-info">Update Campground</button>
                 </div>
