--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,4 +1,6 @@
 <% layout('layouts/boilerplate') %>
+    <div id="map" style="width: 100%; height: 500px"></div>
+    <div class="container">
     <h1>All Campgrounds</h1>
     <div>
         <a href="/campgrounds/new">Add Campground</a>
@@ -32,3 +34,11 @@
             </div>
         </div>
     <%}%>
+
+</div>
+<script>
+    const mapToken = '<%-process.env.MAPBOX_TOKEN%>';
+    const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+</script>
+
+<script src="/javascripts/clusterMap.js"></script>
