--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') %>
     <h1 class="text-center">Edit Campground</h1>
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-md-6 offset-3">
             <!-- <form action="/campgrounds/<%=//campground._id%>?_method=PUT" method="POST" novalidate class="validated-form"> -->
             <form action="/campgrounds/<%=campground._id%>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
                 <div class="mb-3">
