--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,12 @@
 <% layout('layouts/boilerplate') %>
     <div id="map" style="width: 100%; height: 500px"></div>
     <div class="container">
-    <h1>All Campgrounds</h1>
-    <div>
+    <h1 class="mt-3">All Campgrounds</h1>
+    <!-- <div>
         <a href="/campgrounds/new">Add Campground</a>
-    </div>
+    </div> -->
     <% for(let campground of campgrounds) {%>
-        <div class="card" md-3>
+        <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
                     <%if(campground.images.length) {%>
