--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,7 @@
 
     <div class="row">
         <div class="col-6">
-            <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
+            <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <% campground.images.forEach((img, i) => {  %>
                     <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
@@ -21,6 +21,22 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+                <!-- <a class="left carousel-control" href="#campgroundCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#campgroundCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                  </a> -->
+                  <!-- <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button> -->
                 <% } %>
             </div>
             
@@ -49,7 +65,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div id='map' ></div>
+            <div id='map' class="mb-3"></div>
 
             <% if(currentUser){ %>
                 <h2>Leave a Review</h2>
@@ -58,7 +74,8 @@
                         <label class="form-label" for="rating">Rating</label>
                         <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
                     </div> -->
-                    <div class="mb-3">
+                    <!-- <div class="mb-3"> -->
+                        <div>
                         <fieldset class="starability-basic">
                             <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
                                 aria-label="No rating." />
@@ -75,6 +92,7 @@
                         </fieldset>
                     </div>
                     <div class="mb-3">
+                    <!-- <div> -->
                         <label class="form-label" for="body">Review Text</label>
                         <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
                         <div class="valid-feedback">
@@ -84,7 +102,6 @@
                     <button class="btn btn-success">Submit</button>
                 </form>
             <% } %>
-            
             <% for(let review of campground.reviews) { %>
                 <div class="mb-3">
                     <div class="card-body">
